--- a/about.html
+++ b/about.html
@@ -39,9 +39,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="demo.html">Demo</a>
                 </li>
+                <!--
                 <li class="nav-item">
                     <a class="nav-link" href="team.html">Team</a>
                 </li>
+                -->
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
@@ -58,79 +60,42 @@
     </div>
     <div id="background-light">
         <div class="container">
-            <div class="row">
-                <h1>What is our story?</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
-                    Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
-                    tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.
-                </p>
-                <p>
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero.
-                    Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
-                    Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus
-                    risus, iaculis vel, suscipit quis, luctus non, massa.
-                </p>
-                <p>
-                    Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in,
-                    nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing
-                    diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat
-                    mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam.
-                </p>
-                <p>
-                    Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus,
-                    metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante
-                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent
-                    blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede
-                    facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt
-                    malesuada tellus.
-                </p>
-                <p>
-                    Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer
-                    lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque
-                    nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante.
-                    Nulla quam. Aenean laoreet.
-                </p>
-                <p>
-                    Vestibulum nisi lectus, commodo ac, facilisis ac, ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet
-                    eget, justo. Sed pretium blandit orci. Ut eu diam at pede suscipit sodales. Aenean lectus elit, fermentum
-                    non, convallis id, sagittis at, neque. Nullam mauris orci, aliquet et, iaculis et, viverra vitae, ligula.
-                    Nulla ut felis in purus aliquam imperdiet. Maecenas aliquet mollis lectus. Vivamus consectetuer risus
-                    et tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-                    Sed cursus ante dapibus diam.
-                </p>
-                <p>
-                    Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
-                    porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent
-                    per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia
-                    nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
-                </p>
-                <p>
-                    Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
-                    suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus
-                    metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent
-                    taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia,
-                    urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi.
-                    Ut fringilla. Suspendisse potenti.
-                </p>
-                <p>
-                    Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna
-                    luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra
-                    auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus
-                    orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed
-                    non quam.
-                </p>
-                <p>
-                    In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec,
-                    blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur
-                    sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin
-                    massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis
-                    tristique, dignissim in, ultrices sit amet, augue.
-
-
-                </p>
+            <p class="my-4">
+                To read:
+                <a href="https://en.wikipedia.org/wiki/Concussions_in_American_football">Concussions in American football</a> and
+                <a href="http://www.westword.com/news/colorado-ski-resort-safety-and-why-politicians-arent-trying-to-improve-it-9050168">
+                    Ski resort safety problems</a>
+            </p>
+            <h1>The Dirty "C" Word</h1>
+            <hr>
+            <h3>Concussions are an athletes worst nightmare</h3>
+            <p>A recent study found chronic traumatic encephalopathy (CTE) in 110 out of the 111 studied brains of former NFL
+                players. CTE occurs when repeated head trauma leads to the buildup of "tau," an abnormal protein, in the
+                brain. This neurodegenerative disorder essentially kills brain cells leading to a myriad of neurological
+                symptoms. With more and more parents worrying about their kids out on the field, there is a dire need for
+                real time concussion monitoring. In fact, a prominent physician specializing in concussions has called youth
+                football child abuse. Even more so in the NCAA and the NFL where the stakes are high and underreporting is
+                a huge issue.</p>
+            <div class="demo-frame text-center">
+                <img src="res/kids.jpg" class="img-fluid rounded demo-pic">
+                <p class="demo-desc">Football players at extreme young age suffer from concussions as well</p>
             </div>
+            <div class="demo-frame text-center">
+                <img src="res/skier-concussed.jpg" class="img-fluid rounded demo-pic">
+                <p class="demo-desc">Just like football, skiing is a very fast-paced and dangerous sport. It could get very dangerous sometimes.</p>
+            </div>
+            <div class="demo-frame text-center">
+                <img src="res/jackson-hole.jpg" class="img-fluid rounded demo-pic">
+                <p class="demo-desc">And don't forget how big the mountains are, and how hard to search and rescue someone.</p>
+            </div>
+            <h3>Brainwatch to the Rescue</h3>
+
+            <p>Brainwatch is a connected health platform for players and teams to monitor player brain health both real time(in-game)
+                and post game. In-game a parent or team staff member can monitor player concussion risk in real time, with
+                the hope of preventing further damage to the brain after a traumatic event. With a disease like CTE its the
+                small hits that matter, so the Brain Watch platform keeps record of them and the aggregate effect can be
+                evaluated throughout a players career. In addition, Brain Watch could be scaled down to app level and allow
+                boxers, snowboarders, or other athletes monitor head trauma.</p>
         </div>
     </div>
     <!--Footer-->
