--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="demo.html">Demo</a>
                 </li>
+                <!--
                 <li class="nav-item">
                     <a class="nav-link" href="team.html">Team</a>
                 </li>
+                -->
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
@@ -61,7 +63,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Email to: adsflaksdfj@asdf.asdf</p>
+                    <p>Email to: thomashanthomashan at gmail dot com</p>
                     <br>
                     <p>* : we only have our email information right now. We will update this soon.</p>
                 </div>
